objects/Report__c.object
<CustomObject>
    <fields>
        <fullName>Generated_Date__c</fullName>
        <label>Generated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tender__c</fullName>
        <label>Tender</label>
        <referenceTo>Tender__c</referenceTo>
        <relationshipLabel>Reports</relationshipLabel>
        <relationshipName>Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Winner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Winner</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Reports</relationshipLabel>
        <relationshipName>Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REPORT-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>